subdir('ActorGraph')

pathfinder_exe = executable('pathfinder.cpp.executable',
    sources: ['pathfinder.cpp'],
    dependencies: [cxxopts_dep, actor_graph_dep])

linkpredictor_exe = executable('linkpredictor.cpp.executable',
    sources: ['linkpredictor.cpp'],
    dependencies: [cxxopts_dep, actor_graph_dep])