test_actor_graph_exe = executable('test_ActorGraph.cpp.executable', 
    sources: ['test_ActorGraph.cpp'],
    dependencies: [actor_graph_dep, gtest_dep, help_util_dep])
test('My ActorGraph test', test_actor_graph_exe)

test_city_graph_exe = executable('test_CityGraph.cpp.executable', 
    sources: ['test_CityGraph.cpp'],
    dependencies: [city_graph_dep, gtest_dep, help_util_dep])
test('My CityGraph test', test_city_graph_exe)